2005-07-05  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/table/DefaultTableColumnModel/removeColumn.java: new test.
	
2005-07-05  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JTable/addColumn.java: new test,
	* gnu/testlet/javax/swing/JTable/constructors.java: new test,
	* gnu/testlet/javax/swing/JTable/convertColumnIndexToView.java: new test,
	* gnu/testlet/javax/swing/JTable/createDefaultColumnsFromModel.java: new test,
	* gnu/testlet/javax/swing/JTable/createDefaultDataModel.java: new test,
	* gnu/testlet/javax/swing/JTable/createDefaultSelectionModel.java: new test,
	* gnu/testlet/javax/swing/JTable/getAutoCreateColumnsFromModel.java: new test,
	* gnu/testlet/javax/swing/JTable/getColumn.java: new test,
	* gnu/testlet/javax/swing/JTable/getColumnName.java: new test,
	* gnu/testlet/javax/swing/JTable/MyJTable.java: new support file,
	* gnu/testlet/javax/swing/JTable/setAutoCreateColumnsFromModel.java: new test.
	
2005-07-01  Thomas Zander  <zander@kde.org>

	* gnu/testlet/runner/CheckResult.java, gnu/testlet/runner/ClassResult.java,
	gnu/testlet/runner/CreateTags.java, gnu/testlet/runner/Filter.java,
	gnu/testlet/runner/HTMLGenerator.java, gnu/testlet/runner/Mauve.java,
	gnu/testlet/runner/PackageResult.java, gnu/testlet/runner/RunResult.java,
	gnu/testlet/runner/Tags.java, gnu/testlet/runner/TestResult.java,
	gnu/testlet/runner/XMLGenerator.java:  New testrunner which is much faster then
	the SimpleTestRunner and creates html output.

2005-07-01  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/table/DefaultTableColumnModel/moveColumn.java:
	(test): split into testGeneral() and testSpecial();
	(testGeneral): old contents of test() modified slightly to catch error where Classpath is swapping columns rather than moving one column,
	(testSpecial): new special case tests.
	
2005-07-01  David Gilbert  <david.gilbert@object-refinery.com>
